# barcode-vote-classifier

./: README.md  pyproject.toml
src/barcode_vote_classifier/: cli.py
