[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "barcode-vote-classifier"
version = "0.2.0"
description = "Barcode reads/contigs classifier with auto-downloadable reference."
readme = "README.md"
requires-python = ">=3.8"
dependencies = []

[project.scripts]
barcode-vote = "barcode_vote_classifier.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
